# board

./: .gitignore  .pre-commit-config.yaml  0001-esb-nrf-fix.patch  README.md
app/: .gitignore  CMakeLists.txt  Kconfig  west.yml
app/boards/arm/keychron/: Kconfig.board  Kconfig.defconfig  README.md  keychron.dts  keychron_defconfig  keychron_z1-287f3d87.keymap  rtl8762gku_kb-pinctrl.dtsi
app/boards/arm/rtl8762gn_evb/: Kconfig.board  Kconfig.defconfig  rtl8762gn_evb-pinctrl.dtsi  rtl8762gn_evb.dts
app/boards/arm/rtl8762gtu_kb/: Kconfig.board  Kconfig.defconfig  rtl8762gtu_kb.dts
app/boards/shields/keychron/: Kconfig.defconfig  Kconfig.shield  keychron.zmk.yml  keychron_k3se2_ansi.conf  keychron_k3se2_ansi.keymap  keychron_k3se2_ansi.overlay  keychron_k5se2_ansi.conf  keychron_k5se2_ansi.keymap  keychron_k5se2_ansi.overlay  keychron_q1_ultra_ansi.conf  keychron_q1_ultra_ansi.keymap  keychron_q1_ultra_ansi.overlay  keychron_q3_ultra_ansi.conf  keychron_q3_ultra_ansi.keymap  keychron_q3_ultra_ansi.overlay  keychron_q6_ultra_ansi.conf  keychron_q6_ultra_ansi.keymap  keychron_q6_ultra_ansi.overlay  keychron_v0_ultra_ansi.conf  keychron_v0_ultra_ansi.keymap  keychron_v0_ultra_ansi.overlay  keychron_v10_ultra_ansi.conf  keychron_v10_ultra_ansi.keymap  keychron_v10_ultra_ansi.overlay  keychron_v1_ultra_ansi.conf  keychron_v1_ultra_ansi.keymap  keychron_v1_ultra_ansi.overlay  keychron_v1_ultra_iso.conf  keychron_v1_ultra_iso.keymap  keychron_v1_ultra_iso.overlay  keychron_v1_ultra_jp.conf  keychron_v1_ultra_jp.keymap  keychron_v1_ultra_jp.overlay  keychron_v2_ultra_ansi.conf  keychron_v2_ultra_ansi.keymap  keychron_v2_ultra_ansi.overlay  keychron_v3_ultra_ansi.conf  keychron_v3_ultra_ansi.keymap  keychron_v3_ultra_ansi.overlay  keychron_v5_ultra_ansi.conf  (+21 more)
app/boards/shields/keychron_k3se2_ansi/: Kconfig.shield  keychron_k3se2_ansi.conf  keychron_k3se2_ansi.overlay
app/boards/shields/keychron_k5se2_ansi/: Kconfig.shield  keychron_k5se2_ansi.conf  keychron_k5se2_ansi.keymap
app/boards/shields/keychron_q1_ultra_ansi/: Kconfig.shield  keychron_q1_ultra_ansi.conf  rgb_index.h  rgb_matrix_config.h
app/boards/shields/keychron_q3_ultra_ansi/: Kconfig.shield  keychron_q3_ultra_ansi.conf  keychron_q3_ultra_ansi.keymap  led_strip_q3_ultra.dtsi  rgb_matrix_config.h
app/boards/shields/keychron_q6_ultra_ansi/: Kconfig.shield  keychron_q6_ultra_ansi.conf  keychron_q6_ultra_ansi.keymap  keychron_q6_ultra_ansi.overlay  led_strip_q6_ultra.dtsi  rgb_index.h  rgb_matrix_config.h
app/boards/shields/keychron_v0_ultra_ansi/: Kconfig.shield  keychron_v0_ultra_ansi.conf  keychron_v0_ultra_ansi.overlay  rgb_matrix_config.h
app/boards/shields/keychron_v10_ultra_ansi/: Kconfig.shield  keychron_v10_ultra_ansi.conf  keychron_v10_ultra_ansi.keymap  rgb_matrix_config.h
app/boards/shields/keychron_v1_ultra_ansi/: Kconfig.shield  keychron_v1_ultra_ansi.conf  keychron_v1_ultra_ansi.overlay  rgb_index.h  rgb_matrix_config.h
app/dts/: behaviors.dtsi
app/dts/behaviors/: keychron.dtsi
app/dts/bindings/: zmk,gpio-leds-all.yaml  zmk,mode-monitor-pin.yaml
app/include/drivers/: behavior.h
app/include/linker/: itcm.ld  zmk-behaviors.ld  zmk-events.ld
app/include/zmk/: activity.h  app_wdt.h  battery.h  ble.h  board.h  disp.h  endpoints.h  endpoints_types.h  hid.h  hog.h  leds.h  mode_monitor.h  ppt.h
app/include/zmk/ble/: profile.h
app/module/drivers/: CMakeLists.txt  Kconfig
app/src/: activity.c  app_wdt.c  battery.c  behavior.c  behavior_queue.c  ble.c  disp.c  endpoints.c  event_manager.c  gatt_disc.c  hid.c  hid_keychron.c  hid_listener.c  hog.c  keymap.c  kscan.c  led_effect.h  leds.c  main.c  matrix_transform.c  mode_monitor.c  ppt.c  sensors.c  usb.c  usb_hid.c  version.h
app/src/behaviors/: behavior_bt.c  behavior_caps_word.c  behavior_hold_tap.c  behavior_keychron.c  behavior_macro.c  behavior_outputs.c  behavior_rgb_underglow.c  behavior_sensor_rotate_common.c  behavior_sticky_key.c  behavior_tap_dance.c
app/src/dfu/: CMakeLists.txt  aes_api.h  crypto_engine_nsc.h  dfu_common.c  dfu_common.h  flash_map.h  fmc_api.h  my_app_version.h  tdfu.c  tdfu.h  tdfu_prv.c  tdfu_prv.h  tdfu_usb.c  wdt.h
app/src/events/: led_state_changed.c
app/src/launcher/: 875826192.json  dynamic_keymap.c  dynamic_keymap.h  dynamic_macro.h  k10pro_ansi.json  k3se2_ansi_via.json  k5se2_ansi_via.json  keycodes.h  launcher.c  launcher.h  map_keycode.c  mousekey.c  mousekey.h  q1ultra_via_20250915.json  q3ultra_via_20250918.json  q6ultra_20250814.json  q6ultra_20251022.json  qinglong87_ultra8k_via.json  qinglong87_via.json  rs45_8k  send_string.c  send_string.h  v0_ultra_via_20250916.json  v10_ultra-via_20250916.json  v1_ultra.json  v1_via.json  v1ultra_iso_via.json  v1ultra_jp_via.json  v2_ultra.json  v3 ultra_ansi_via_20251024.json  v5ultra_20250919.json  v6_ultra.json
app/src/led/: CMakeLists.txt  gpio_leds.c  led_effect.h  leds.c
app/src/mp_test/: mp_test.c  single_tone.c
app/src/ppt/: keyboard_ppt_app.c  ppt_send.c  ppt_sync_app.c
app/src/rgb/: CMakeLists.txt  q1ultra_rgb.h  q1ultra_rgb_index.h  q3ultra_rgb.h  q3ultra_rgb_index.h  q6_ultra_rgb.h  q6_ultra_rgb_index.h  rgb_effects.c  rgb_matrix.c  rgb_matrix.h  rgb_matrix_conf.h  rgb_matrix_drivers.c  rgb_matrix_types.h  rs45_rgb.h  rs45_rgb_index.h  rs87_rgb.h  rs87_rgb_index.h  v0_ultra_rgb.h  v0_ultra_rgb_index.h  v10_ultra_rgb.h  v10_ultra_rgb_index.h  v1_ultra_iso_rgb.h  v1_ultra_iso_rgb_index.h  v1_ultra_jp_rgb.h  v1_ultra_jp_rgb_index.h  v1_ultra_rgb.h  v1_ultra_rgb_index.h  v2_ultra_rgb.h  v2_ultra_rgb_index.h  v3_ultra_rgb.h  v3_ultra_rgb_index.h  v5_ultra_rgb.h  v5_ultra_rgb_index.h  v6_ultra_rgb.h  v6_ultra_rgb_index.h  z270_ultra_rgb.h  z270_ultra_rgb_index.h
app/src/settings/: reset_settings_nvs.c
app/src/ssd1306/: CMakeLists.txt  font6x8.h  nano_engine.h  nano_gfx.cpp  nano_gfx.h  nano_gfx_types.h  ssd1306.h  ssd1306_16bit.c  ssd1306_16bit.h  ssd1306_1bit.c  ssd1306_1bit.h  ssd1306_8bit.c  ssd1306_8bit.h  ssd1306_console.cpp  ssd1306_console.h  ssd1306_fonts.c  ssd1306_fonts.h  ssd1306_generic.c  ssd1306_generic.h  ssd1306_menu.c
(+189 files in other folders)
